Generalised identifier type (type class + type variable)
We need this because when a LAMA program is generated
position information no longer make any sense.

--- a/language/LAMA.cabal
+++ b/language/LAMA.cabal
@@ -17,8 +17,10 @@ Library
     Lang.LAMA.Types
     Lang.LAMA.Structure
     Lang.LAMA.UnTypedStructure
+    Lang.LAMA.Structure.PosIdentUntyped
     Lang.LAMA.Pretty
     Lang.LAMA.Typing.TypedStructure
+    Lang.LAMA.Structure.PosIdentTyped
     Lang.LAMA.Typing.TypeCheck
     Lang.LAMA.PrettyTyped
     Lang.LAMA.Parse
