--- a/scade2lama/Scade2Lama.cabal
+++ b/scade2lama/Scade2Lama.cabal
@@ -8,7 +8,8 @@ Description:
 Executable scade2lama
   default-language: Haskell2010
   Build-Depends: base, containers, language-scade, language-lama,
-    transformers, placeholders, mtl, bytestring, split, pretty
+    transformers, placeholders, mtl, bytestring, split, pretty,
+    natural-numbers
   Hs-Source-Dirs: . lib
   GHC-Options: -Wall
   other-modules:
