Renamed module to be able to put rewrite chaining into new module

--- a/scade2lama/Scade2Lama.cabal
+++ b/scade2lama/Scade2Lama.cabal
@@ -18,5 +18,5 @@ Executable scade2lama
     RewriteOperatorApp
     RewriteTemporal
     UnrollTemporal
-    Transform
+    TransformPackage
   Main-Is: Main.hs
