--- a/language/LAMA.cabal
+++ b/language/LAMA.cabal
@@ -8,7 +8,8 @@ Description:
 Library 
   default-language: Haskell2010
   Build-Depends: base, containers, mtl, bytestring, natural-numbers,
-    transformers, pretty, array, fgl, text, filepath, placeholders
+    transformers, pretty, array, fgl, text, filepath, placeholders,
+    prelude-extras
   Hs-Source-Dirs: . lib
   GHC-Options: -Wall -O2
   exposed-modules:
