--- a/language/LAMA.cabal
+++ b/language/LAMA.cabal
@@ -14,6 +14,7 @@ Library
   GHC-Options: -Wall -O2
   exposed-modules:
     Data.Graph.Inductive.GenShow
+    Data.Bits.Size
     Lang.LAMA.Identifier
     Lang.LAMA.Types
     Lang.LAMA.Structure
