--- a/language/LAMA.cabal
+++ b/language/LAMA.cabal
@@ -9,7 +9,7 @@ Library
   default-language: Haskell2010
   Build-Depends: base, containers, mtl, bytestring, natural-numbers,
     transformers, pretty, array, fgl >= 5.5.0.0, text, filepath, placeholders,
-    prelude-extras
+    prelude-extras, utf8-string
   Hs-Source-Dirs: . lib
   GHC-Options: -Wall -O2
   exposed-modules:
